src/snapshots/avdl__compiler__tests__convert_str_undefined_type_error.snap
---
source: src/compiler.rs
expression: "crate::error::render_diagnostic(&err)"
---
  x Undefined name: test.MissingType
   ,-[<input>:4:28]
 3 |             protocol P {
 4 |                 record R { MissingType field; }
   :                            ^^^^^|^^^^^
   :                                 `-- Undefined name: test.MissingType
 5 |             }
   `----
