src/snapshots/avdl__compiler__tests__extract_str_undefined_message_return_type_is_rejected.snap
---
source: src/compiler.rs
expression: "crate::error::render_diagnostic(&err)"
---
  x Undefined name: test.DoesNotExist
   ,-[<input>:4:17]
 3 |             protocol P {
 4 |                 DoesNotExist getUnknown();
   :                 ^^^^^^|^^^^^
   :                       `-- Undefined name: test.DoesNotExist
 5 |             }
   `----
