src/snapshots/avdl__compiler__tests__field_default_invalid_for_enum_reference.snap
---
source: src/compiler.rs
assertion_line: 1396
expression: "crate::error::render_diagnostic(&err)"
---
  x Invalid default for field `favorite` in `R`: expected enum Color, got
  | number
   ,-[<input>:5:38]
 4 |                 record R {
 5 |                     Color favorite = 42;
   :                                      ^|
   :                                       `-- Invalid default for field `favorite` in `R`: expected enum Color, got number
 6 |                 }
   `----
