src/snapshots/avdl__compiler__tests__field_default_invalid_for_enum_reference_snapshot.snap
---
source: src/compiler.rs
assertion_line: 1429
expression: render_error(&err)
---
  x Invalid default for field `favorite` in `R`: expected enum Color, got
  | number
   ,-[<input>:5:27]
 4 |                 record R {
 5 |                     Color favorite = 42;
   :                           ^^^^|^^^
   :                               `-- Invalid default for field `favorite` in `R`: expected enum Color, got number
 6 |                 }
   `----
