src/snapshots/avdl__compiler__tests__field_default_invalid_for_record_reference.snap
---
source: src/compiler.rs
expression: "crate::error::render_diagnostic(&err)"
---
  x Invalid default for field `nested` in `Outer`: expected record Inner, got string
   ,-[<input>:5:36]
 4 |                 record Outer {
 5 |                     Inner nested = "not an object";
   :                                    ^^^^^^^|^^^^^^^
   :                                           `-- Invalid default for field `nested` in `Outer`: expected record Inner, got string
 6 |                 }
   `----
