src/snapshots/avdl__compiler__tests__idl_import_parse_failure.snap
---
source: src/compiler.rs
expression: stable
---
  x parse imported IDL <tmpdir>/bad-syntax.avdl
  `-> line 1:0 unexpected token `this`
   ,-[<tmpdir>/bad-syntax.avdl:1:1]
 1 | this is not valid avdl {{{
   : ^^|^
   :   `-- unexpected `this`
   `----
  help: expected one of: protocol, namespace, import, schema, enum, fixed, error, record, @
