src/snapshots/avdl__compiler__tests__idl_import_read_failure.snap
---
source: src/compiler.rs
expression: stable
---
  x read imported IDL <tmpdir>/not-a-file.avdl
  `-> Is a directory (os error 21)
